Fix low latency 2D canvas updates

The code was failing to flush deferred rendering commands recorded
by Canvas2DLayerBridge before dispatching animation frames.

This CL does not fix the problem completely: there is still an issue
when the canvas is not gpu-accelerated

BUG=867601

Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I32db0759af549ec6cd09ca677fff4ee215cae49e
Reviewed-on: https://chromium-review.googlesource.com/1152028
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Commit-Queue: Justin Novosad <junov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578493}
Former-commit-id: b63360e2a16d03144d748ff4179339fde2217c27